@@ -27,6 +27,9 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       compatibility with Moab.
   b - preserve the order on array strings in TORQUE, like the route_destinations for a 
       routing queue 
+  b - fix bugzilla #111, multi-line environment variables causing errors in TORQUE.
+  b - allow apostrophes in Mail_Users attributes, as apostrophes are rare but legal email
+      characters 
 
 3.0.0
   e - serverdb is now stored as xml, this is no longer configurable.
